--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    
+    <color name="white_10pc">#F9F9F9</color>
+    <color name="red_30pc">#EE4865</color>
+    <color name="black_60pc">#0E1D31</color>
 </resources>
